스크린 캡쳐 기록 v.1.0 (스크린샷 폴더는 gitignore에 추가)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 ProjectPlanter/Assets/Materials/Menu/ScrollBgMaterial.mat
 ProjectPlanter/Assets/Materials/Menu/ScrollBgMaterial.mat
+ProjectPlanter/Assets/RecordScreenshots.meta
