--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 ProjectPlanter/Assets/Materials/Menu/ScrollBgMaterial.mat
 ProjectPlanter/Assets/Materials/Menu/ScrollBgMaterial.mat
 ProjectPlanter/Assets/RecordScreenshots.meta
+/ProjectPlanter/Assets/RecordScreenshots
