Build 폴더 안의 스크린샷 폴더 gitignore에 추가

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ ProjectPlanter/Assets/Materials/Menu/ScrollBgMaterial.mat
 ProjectPlanter/Assets/Materials/Menu/ScrollBgMaterial.mat
 ProjectPlanter/Assets/RecordScreenshots.meta
 /ProjectPlanter/Assets/RecordScreenshots
+/ProjectPlanter/Build/ProjectPlanter_Data/RecordScreenshots
