PPT 충돌 방지를 위해 gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ ProjectPlanter/Assets/Materials/Menu/ScrollBgMaterial.mat
 ProjectPlanter/Assets/RecordScreenshots.meta
 /ProjectPlanter/Assets/RecordScreenshots
 /ProjectPlanter/Build/ProjectPlanter_Data/RecordScreenshots
+ProjectPlanter/최종 프로젝트 포트폴리오.pptx
+*.pptx
